apps/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
  labels:
    app.kubernetes.io/name: mealie
spec:
  selector:
    app.kubernetes.io/name: mealie
  ports:
    - port: 9000
      targetPort: 9000
